<resources>
    <string name="newsblur">NewsBlur</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="login_registration_email_hint">email address</string>
    <string name="login_button_login">Login</string>
    <string name="login_forgot_password"><u>Forgot password</u></string>
    <string name="login_custom_server"><u>Self-hosted custom server</u></string>
    <string name="login_custom_server_hint">https://www.newsblur.com</string>
    <string name="login_message_error">There was problem logging in to NewsBlur.</string>
    <string name="login_logging_in">Logging in…</string>
    <string name="login_logged_in">Reticulating splines…</string>
    <string name="login_retrieving_feeds">Retrieving feeds…</string>
    <string name="login_next">Next</string>
    <string name="login_custom_server_scheme_error">Expected \'https://\' in custom server URL</string>
    <string name="search_for_feed">Search for feeds</string>
    <string name="loading">Loading…</string>
    <string name="orig_text_loading">Fetching story text…</string>
    <string name="follow_error">There was a problem following the user.</string>
    <string name="unfollow_error">There was a problem unfollowing the user.</string>
    <string name="description_login_button">Press to log in</string>
    <string name="description_login_logo">NewsBlur Logo</string>
	<string name="description_profile_picture">The user\'s profile picture</string>
	<string name="description_row_folder_icon">folder icon</string>
    <string name="description_row_feed_icon">feed icon</string>
    <string name="description_row_feed_mute_toggle">feed mute toggle</string>
    <string name="description_activity_icon">An icon illustrating the user\'s activity</string>
    <string name="description_follow_button">Follow or unfollow a user</string>
    <string name="description_comment_user">Comment user image</string>
    <string name="description_empty_list_image">Empty list placeholder</string>
    <string name="description_menu">Menu</string>
    <string name="title_choose_folders">Choose folders for feed %s</string>
    <string name="title_rename_feed">Rename feed %s</string>
    <string name="title_rename_folder">Rename folder %s</string>
	<string name="all_stories_title">All Stories</string>
	<string name="infrequent_title">Infrequent Site Stories</string>
	<string name="all_shared_stories_title">All Shared Stories</string>
    <string name="global_shared_stories_title">Global Shared Stories</string>
	<string name="read_stories_title">Read Stories</string>
	<string name="saved_stories_title">Saved Stories</string>
    <string name="saved_searches_title">Saved Searches</string>
    <string name="top_level">TOP LEVEL</string>
	<string name="send_full">%1$s \n\%2$s \n\n%3$s \n\n—\nShared with NewsBlur</string>
    <string name="menu_original">View original</string>
    <string name="menu_send_story">Send link to…</string>
    <string name="menu_send_story_full">Send story to…</string>
    <string name="menu_mark_feed_as_read">Mark feed as read</string>
    <string name="menu_delete_feed">Delete feed</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_delete_saved_search">Delete saved search</string>
    <string name="menu_unfollow">Unfollow user</string>
    <string name="menu_choose_folders">Choose folders</string>
    <string name="menu_notifications_choose">Notifications</string>
    <string name="menu_notifications_disable">Disable notifications</string>
    <string name="menu_notifications_focus">Notify on new focus stories</string>
    <string name="menu_notifications_unread">Notify on all new stories</string>
    <string name="menu_sharenewsblur">Share this story</string>
    <string name="menu_text_size">Text size</string>
    <string name="menu_text_size_xs">XS</string>
    <string name="menu_text_size_s">S</string>
    <string name="menu_text_size_m">M</string>
    <string name="menu_text_size_l">L</string>
    <string name="menu_text_size_xl">XL</string>
    <string name="menu_text_size_xxl">XXL</string>
    <string name="menu_font">Font</string>
    <string name="menu_save_story">Save this story</string>
    <string name="menu_unsave_story">Unsave this story</string>
    <string name="menu_newest_mark_older_stories_as_read">\u21E3 Mark older as read</string>
    <string name="menu_newest_mark_newer_stories_as_read">\u21E1 Mark newer as read</string>
    <string name="menu_mark_story_as_read">Mark as read</string>
    <string name="menu_mark_unread">Mark as unread</string>
    <string name="menu_search_stories">Search…</string>
    <string name="menu_mute_feed">Mute feed</string>
    <string name="menu_unmute_feed">Unmute feed</string>
    <string name="menu_instafetch_feed">Insta-fetch stories</string>
    <string name="menu_infrequent_cutoff">Infrequent stories per month</string>
    <string name="menu_intel">Intelligence trainer</string>
    <string name="menu_rename_feed">Rename feed</string>
    <string name="menu_story_list_style_choose">List style</string>
    <string name="menu_save_search">Save Search</string>
    <string name="list_style_list">List</string>
    <string name="list_style_grid_f">Grid (fine)</string>
    <string name="list_style_grid_m">Grid (medium)</string>
    <string name="list_style_grid_c">Grid (coarse)</string>
    <string name="story_content_preview_none">Title only (none)</string>
    <string name="story_content_preview_small">2 lines (small)</string>
    <string name="story_content_preview_medium">4 lines (medium)</string>
    <string name="story_content_preview_large">6 lines (large)</string>
    <string name="mark_read_on_scroll_disabled">Leave unread</string>
    <string name="mark_read_on_scroll_enabled">Read on scroll</string>
    <string name="menu_mark_all_as_read">Mark all as read</string>
    <string name="menu_theme_choose">Theme</string>
    <string name="settings_cat_offline">Offline reading</string>
    <string name="settings_enable_offline">Download stories</string>
    <string name="settings_enable_offline_sum">Periodically fetch stories in background</string>
    <string name="settings_enable_image_prefetch">Download images</string>
    <string name="settings_enable_image_prefetch_sum">Pre-fetch images for offline reading</string>
    <string name="settings_enable_text_prefetch">Download full text</string>
    <string name="settings_enable_text_prefetch_sum">Pre-fetch full text for offline reading</string>
    <string name="settings_keep_old_stories">Keep stories after reading</string>
    <string name="settings_keep_old_stories_sum">Disable to reduce storage usage</string>
    <string name="menu_network_select">Download using…</string>
    <string name="menu_network_select_sum">Restrict background data to chosen networks</string>
    <string name="default_network_select_value">NOMONONME</string>
    <string name="menu_delete_offline_stories">Delete offline stories…</string>
    <string name="menu_delete_offline_stories_key">delete_offline_stories</string>
    <string name="menu_delete_offline_stories_sum">Free up space by clearing stored stories and images</string>
    <string name="menu_cache_age_select">How long to keep stories…</string>
    <string name="menu_cache_age_select_sum">Clear stored stories for offline reading</string>
    <string name="default_cache_age_select_value">CACHE_AGE_30D</string>
    <string name="settings_cat_feed_list">Feed list</string>
    <string name="setting_feed_list_order">Feed list order…</string>
    <string name="settings_enable_row_global_shared">Show Global Shared Stories</string>
    <string name="settings_enable_row_infrequent_stories">Show Infrequent Stories</string>
    <string name="settings_cat_story_list">Story List</string>
    <string name="menu_story_order">Story order</string>
    <string name="settings_story_order">Story order…</string>
    <string name="default_story_order_value">NEWEST</string>
    <string name="default_feed_list_order_value">ALPHABETICAL</string>
    <string name="menu_story_content_preview">Story content preview</string>
    <string name="menu_story_thumbnail_preview">Thumbnail preview</string>
    <string name="menu_mark_read_on_scroll">Mark read on scroll</string>
    <string name="settings_read_filter">Read story filter…</string>
    <string name="menu_read_filter">Read story filter</string>
    <string name="default_read_filter_value">ALL</string>
    <string name="settings_auto_open_first_unread">Auto-open first story</string>
    <string name="settings_auto_open_first_unread_sum">Automatically open first unread story in the story list</string>
    <string name="settings_mark_read_on_feed_scroll">Mark story titles read on scroll</string>
    <string name="settings_mark_read_on_feed_scroll_sum">Automatically mark stories as read when scrolled past</string>
    <string name="settings_mark_story_read">Mark a story as read…</string>
    <string name="mark_story_read_default_value">IMMEDIATELY</string>
    <string name="settings_social">Sharing stories</string>
    <string name="settings_show_public_comments">Show public comments</string>
    <string name="settings_reading">Reading</string>
    <string name="settings_content_preview">Content preview text…</string>
    <string name="settings_thumbnails_style">Image preview thumbnails…</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <string name="show_content_preview_default_value">MEDIUM</string>
    <string name="story_thumbnail_left_hand_small">Left-hand small</string>
    <string name="story_thumbnail_left_hand_large">Left-hand large</string>
    <string name="story_thumbnail_right_hand_small">Right-hand small</string>
    <string name="story_thumbnail_right_hand_large">Right-hand large</string>
    <string name="story_thumbnail_no_image_preview">No image preview</string>
    <string name="thumbnail_style_default_value">RIGHT_LARGE</string>
    <string name="auto">Auto</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <string name="settings_gestures">Gestures</string>
    <string name="volume_key_navigation">Volume key navigation…</string>
    <string name="default_volume_key_navigation_value">OFF</string>
    <string name="settings_load_next_on_mark_read">Open next feed/folder after read</string>
    <string name="settings_load_next_on_mark_read_summary">Load the next feed/folder after marked as read</string>
    <string name="settings_confirm_mark_all_read">Confirm mark all read on…</string>
    <string name="confirm_mark_all_read_value">FOLDER_ONLY</string>
    <string name="settings_confirm_mark_range_read">Confirm mark older/newer read</string>
    <string name="settings_ltr_gesture_action">Rightward swipe on story title…</string>
    <string name="ltr_gesture_action_value">GEST_ACTION_MARKREAD</string>
    <string name="settings_rtl_gesture_action">Leftward swipe on story title…</string>
    <string name="rtl_gesture_action_value">GEST_ACTION_MARKUNREAD</string>
    <string name="default_browser">Default browser…</string>
    <string name="font">Font…</string>
    <string name="default_font">Default</string>
    <string name="gotham_narrow_font">Gotham Narrow</string>
    <string name="chronicle_font">Chronicle</string>
    <string name="noto_sans_font">Noto Sans</string>
    <string name="noto_serif_font">Noto Serif</string>
    <string name="open_sans_condensed_font">Open Sans Condensed</string>
    <string name="roboto_font">Roboto</string>
    <string name="anonymous_pro_font">Anonymous Pro</string>
    <string name="default_font_value">DEFAULT</string>
    <string name="default_default_browser">@string/system_default_prefvalue</string>
    <string name="go_to_feed">Go to feed</string>
</resources>